Fix Flipkart data migration, Shop/Cart/Wishlist, AI features, and content filtering